--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "type": "module",
   "dependencies": {
+    "create-hmac": "^1.1.7",
     "dayjs": "^1.11.4",
     "graphql-request": "^4.3.0",
     "svelte-markdown": "^0.2.2",
