--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-markdown": "^0.2.3",
 		"svelte-preprocess": "^4.10.7",
+		"svelte-time": "^0.7.1",
 		"tailwindcss": "^3.1.8",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
