--- a/package.json
+++ b/package.json
@@ -1,33 +1,49 @@
 {
-  "name": "frontend",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "package": "svelte-kit package",
-    "preview": "vite preview",
-    "prepare": "svelte-kit sync"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.4",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "postcss-load-config": "^4.0.1",
-    "svelte": "^3.44.0",
-    "svelte-body": "^1.3.6",
-    "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.5",
-    "vite": "^3.0.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "create-hmac": "^1.1.7",
-    "dayjs": "^1.11.4",
-    "graphql-request": "^4.3.0",
-    "svelte-markdown": "^0.2.2",
-    "svelte-time": "^0.7.1"
-  }
+	"name": "svelte-blog",
+	"version": "1.0.0",
+	"author": "tigaron",
+	"description": "My personal blog built with SvelteKit",
+	"license": "ISC",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"package": "svelte-kit package",
+		"preview": "vite preview",
+		"test": "playwright test",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
+		"format": "prettier --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.25.0",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@tailwindcss/aspect-ratio": "^0.4.0",
+		"@tailwindcss/typography": "^0.5.4",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"autoprefixer": "^10.4.8",
+		"eslint": "^8.16.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"flowbite-svelte": "^0.24.19",
+		"postcss": "^8.4.16",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.7.1",
+		"svelte-markdown": "^0.2.3",
+		"svelte-preprocess": "^4.10.7",
+		"svelte-time": "^0.7.1",
+		"tailwindcss": "^3.1.8",
+		"tslib": "^2.3.1",
+		"typescript": "^4.7.4",
+		"vite": "^3.0.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"graphql": "^16.6.0",
+		"graphql-request": "^4.3.0"
+	}
 }
